Bug 151474 - entering URL in run-command window does not open konqueror
Summary: entering URL in run-command window does not open konqueror
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Aaron J. Seigo
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-10-28 18:23 UTC by Martin Koller
Modified: 2007-10-30 01:17 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Koller 2007-10-28 18:23:07 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources
OS:                Linux

When I enter some URL, e.g. www.kde.org, I expect to have konqueror opened with the given URL (as was the case in KDE3).
In plasma, a window is opened titled "strigiclient" whatever that is ...
If I type it including the protocol (http://www.kde.org) it works.
It also does not open konqueror when entering some path, e.g. /tmp
Comment 1 Maksim Orlovich 2007-10-30 01:05:17 UTC
It's actually more general than that --- ~/kde3/kdelibs/somefile.cpp would open kwrite in KDE3, etc. Not sure whether it's the same path or not.

Comment 2 Aaron J. Seigo 2007-10-30 01:10:35 UTC
SVN commit 730891 by aseigo:

make /tmp, www.kde.org, etc... work.

David: i notice that konqueror is still the default file manager via KRun? would it make sense to have a KToolInvocation::invokeFileManager(QString)? how do make it so that KRun::runUrl opens the default associated app with inode/folder for directories? (i have dolphin with that association, but KRun still doesn't Do The Right Thing) and finally, how do we make dolphin the default association for inode/folder? (i'm not familiar enough with the new mimetype system =/)

BUG:151474
CCMAIL:faure@kde.org


 M  +29 -9     webshortcutrunner.cpp  
 M  +2 -0      webshortcutrunner.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=730891
Comment 3 Aaron J. Seigo 2007-10-30 01:17:13 UTC
maksim: sorry, i didn't see your comment there between the time i read the report and committed the fix =/ in any case, that really belongs in its own runner for mimetypes and should return an entry for all possible apps, with the default app listed at the top.