make /tmp, www.kde.org, etc... work.

David: i notice that konqueror is still the default file manager via KRun? would it make sense to have a KToolInvocation::invokeFileManager(QString)? how do make it so that KRun::runUrl opens the default associated app with inode/folder for directories? (i have dolphin with that association, but KRun still doesn't Do The Right Thing) and finally, how do we make dolphin the default association for inode/folder? (i'm not familiar enough with the new mimetype system =/)

BUG:151474
CCMAIL:faure@kde.org

svn path=/trunk/KDE/kdebase/workspace/; revision=730891